src/test/custom/invalid/import/selfImport.hwacc
# import itself

import selfImport.hwacc 

int f() is 
  return 0
end